--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ const metadata = {
     id="features"
     tagline=""
     title="功能列表"
-    subtitle="功能详细描述"
+    subtitle="该网站是一个集定制食谱、食谱管理、食材搜索、健康咨询、社区互动、营养知识普及、食谱推荐、饮食计划制定、健康监测于一体的综合性平台。旨在为您提供个性化的饮食健康管理服务，帮助建立科学的饮食习惯，促进身体健康。"
     items={[
       {
         title: 'Astro + Tailwind CSS Integration',
@@ -82,19 +82,54 @@ const metadata = {
     title="3 分练，7 分吃"
     items={[
       {
-        title: '原因一',
+        title: '个体差异的深度理解',
         description:
-          'Benefiting from the performance and developer-friendly features of this modern static site generator.',
+          '每个人的基因、代谢速率、身体活动水平和健康状况都是独一无二的。一个量身定制的食谱能够深入考虑这些内在因素，确保营养摄入与个人的生物需求完美匹配，从而提升整体健康水平。',
       },
       {
-        title: '原因二',
+        title: '健康目标的个性化实现',
         description:
-          'Facilitating rapid design and consistent styling with this highly popular utility-first CSS framework.',
+          '无论是追求健美的体型、增强体力还是改善健康状况，个性化食谱都能提供针对性的营养支持。例如，减肥者可能需要低热量、高纤维的饮食计划，而增肌者则需要高蛋白、适量碳水化合物的摄入。',
       },
       {
-        title: '原因三',
+        title: '食物偏好与限制的尊重',
         description:
-          'Ensure your website looks and functions consistently across various web browsers, delivering a seamless experience to all users.',
+          '个人食谱应尊重每个人的饮食偏好和限制，包括食物过敏、不耐受或道德选择。这样的食谱不仅能够避免潜在的健康风险，还能确保饮食的多样性和营养的全面性。',
+      },
+      {
+        title: '文化和宗教的融合',
+        description:
+          '一个适合个人的营养食谱应该融入文化和宗教的饮食传统，同时确保营养的均衡。这不仅能够满足精神和情感的需求，还能促进身体健康。',
+      },
+      {
+        title: '生活方式的适应性',
+        description:
+        '个性化食谱应根据个人的工作和生活节奏进行调整。例如，对于经常出差的商务人士，食谱可能需要便于携带和准备；而对于长时间工作的人，则需要提供足够的能量和营养以支持其日常活动。',
+      },
+      {
+        title: '年龄和生理阶段的考虑',
+        description:
+          '随着生命阶段的变迁，营养需求也会随之变化。儿童需要支持大脑和身体发育的营养，成年人需要维持健康和活力，而老年人则需要预防慢性疾病和维持骨骼健康。',
+      },
+      {
+        title: '慢性疾病的个性化管理',
+        description:
+          '对于患有慢性疾病的人，个性化食谱可以作为药物治疗的辅助手段，通过调整饮食结构来控制病情，减少药物副作用。',
+      },
+      {
+        title: '心理健康的支持',
+        description:
+          '营养与心理健康紧密相连。一个适合自己的食谱可以提供必要的营养素，如Omega-3脂肪酸、维生素B群和镁，这些营养素对于情绪稳定和大脑健康至关重要。',
+      },
+      {
+        title: '长期健康的投资',
+        description:
+          '坚持个性化的营养食谱是对长期健康的投资。它有助于预防疾病、提高生活质量，并可能延长寿命。',
+      },
+      {
+        title: '个人化体验的享受',
+        description:
+          '一个适合自己的食谱应该让饮食成为一种愉悦的体验。通过精心挑选食材和烹饪方法，可以使每一餐都成为享受健康和美味的时刻。',
       },
     ]}
     image={{
@@ -103,8 +138,7 @@ const metadata = {
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">一个好的营养食谱的重要性</h3>
-      blah blah blah
+      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">一个适合自己的营养食谱的重要性</h3>
     </Fragment>
 
     <Fragment slot="bg">
