--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -104,7 +104,7 @@ const metadata = {
       {
         title: '生活方式的适应性',
         description:
-        '个性化食谱应根据个人的工作和生活节奏进行调整。例如，对于经常出差的商务人士，食谱可能需要便于携带和准备；而对于长时间工作的人，则需要提供足够的能量和营养以支持其日常活动。',
+          '个性化食谱应根据个人的工作和生活节奏进行调整。例如，对于经常出差的商务人士，食谱可能需要便于携带和准备；而对于长时间工作的人，则需要提供足够的能量和营养以支持其日常活动。',
       },
       {
         title: '年龄和生理阶段的考虑',
@@ -123,8 +123,7 @@ const metadata = {
       },
       {
         title: '长期健康的投资',
-        description:
-          '坚持个性化的营养食谱是对长期健康的投资。它有助于预防疾病、提高生活质量，并可能延长寿命。',
+        description: '坚持个性化的营养食谱是对长期健康的投资。它有助于预防疾病、提高生活质量，并可能延长寿命。',
       },
       {
         title: '个人化体验的享受',
@@ -149,21 +148,20 @@ const metadata = {
     title="从现在开始，做好你的营养管理。"
     items={[
       {
-        title: '第一步: <span class="font-medium">aaa</span>',
+        title: '第一步: <span class="font-medium">评估当前饮食</span>',
         description:
-          "Kickstart with GitHub! Either fork the AstroWind template or simply click 'Use this template'. Your canvas awaits, ready for your digital masterpiece. In just a few clicks, you've already set the foundation.",
+          '记录饮食：连续记录三天至一周的饮食，包括食物种类、份量和摄入时间。分析饮食：通过对比营养推荐摄入量，了解当前饮食的优点和不足。',
         icon: 'tabler:package',
       },
       {
-        title: '第二步: <span class="font-medium">bbb</span>',
+        title: '第二步: <span class="font-medium">考虑个人因素</span>',
         description:
-          "Pour your vision into it. Add images, text, and all that jazz to breathe life into your digital space. Remember, it's the content that tells your story, so make it captivating.",
+          '年龄与性别：不同年龄和性别对营养需求有差异，如儿童和青少年需要更多的蛋白质和钙质。体重与活动水平：体重和活动水平直接影响热量需求，肥胖者需要减少热量摄入，而运动员需要增加。特殊需求：考虑是否有食物过敏、宗教信仰等特殊需求。',
         icon: 'tabler:letter-case',
       },
       {
-        title: '第三步: <span class="font-medium">ccc</span>',
-        description:
-          'Give it your personal touch. Tailor colors, fonts, and layouts until it feels just right. Your unique flair, amplified by AstroWind! Precision in design ensures a seamless user experience.',
+        title: '第三步: <span class="font-medium">设定营养目标</span>',
+        description: '明确目标：如减肥、增肌、改善心血管健康等。目标可行性：设定具体、可衡量且可实现的营养目标。',
         icon: 'tabler:paint',
       },
       {
