--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,12 +19,12 @@ const metadata = {
     actions={[
       {
         variant: 'primary',
-        text: 'Get template',
-        href: 'https://github.com/onwidget/astrowind',
+        text: '开始阅读',
+        href: '/cookbook',
         target: '_blank',
-        icon: 'tabler:download',
+        icon: 'tabler:book',
       },
-      { text: 'Learn more', href: '#features' },
+      { text: '了解更多', href: '#features' },
     ]}
     image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
   >
@@ -182,7 +182,7 @@ const metadata = {
       {
         variant: 'primary',
         text: '开始阅读',
-        href: 'https://github.com/onwidget/astrowind',
+        href: '/cookbook',
         target: '_blank',
         icon: 'tabler:book',
       },
