--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -175,7 +175,7 @@ const metadata = {
     }}
   />
 
-  <BlogLatestPosts title="找到最适合您的食谱" information={`aaaaa`} />
+  <BlogLatestPosts title="找到最适合您的食谱" information={`我们会定期更新`} />
 
   <CallToAction
     actions={[
