simplify index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const metadata = {
       },
       { text: '了解更多', href: '#features' },
     ]}
-    image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
+    <!-- image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }} -->
   >
     <Fragment slot="title">
       符合你需求的<span class="text-accent dark:text-white highlight"> 营养食谱</span>
@@ -35,45 +35,45 @@ const metadata = {
   <Features
     id="features"
     tagline=""
-    title="功能列表"
+    title="功能"
     subtitle="该网站是一个集定制食谱、食谱管理、食材搜索、健康咨询、社区互动、营养知识普及、食谱推荐、饮食计划制定、健康监测于一体的综合性平台。旨在为您提供个性化的饮食健康管理服务，帮助建立科学的饮食习惯，促进身体健康。"
     items={[
-      {
-        title: 'Astro + Tailwind CSS Integration',
-        description:
-          'A seamless integration between two great frameworks that offer high productivity, performance and versatility.',
-        icon: 'tabler:brand-tailwind',
-      },
-      {
-        title: 'Ready-to-use Components',
-        description:
-          'Widgets made with Tailwind CSS ready to be used in Marketing Websites, SaaS, Blogs, Personal Profiles, Small Business...',
-        icon: 'tabler:components',
-      },
-      {
-        title: 'Best Practices',
-        description:
-          'Creating secure, efficient, and user-friendly websites that deliver exceptional experiences and lasting value.',
-        icon: 'tabler:list-check',
-      },
-      {
-        title: 'Excellent Page Speed',
-        description:
-          'Having a good page speed impacts organic search ranking, improves user experience (UI/UX) and increase conversion rates.',
-        icon: 'tabler:rocket',
-      },
-      {
-        title: 'Search Engine Optimization (SEO)',
-        description:
-          "SEO lies in its ability to enhance a website's visibility, driving organic traffic and enabling it to reach a wider audience.",
-        icon: 'tabler:arrows-right-left',
-      },
-      {
-        title: 'Open to new ideas and contributions',
-        description:
-          'Embracing a culture that is open to new ideas and contributions is integral fostering innovation, collaboration, and a dynamic user experience.',
-        icon: 'tabler:bulb',
-      },
+      // {
+      //   title: 'Astro + Tailwind CSS Integration',
+      //   description:
+      //     'A seamless integration between two great frameworks that offer high productivity, performance and versatility.',
+      //   icon: 'tabler:brand-tailwind',
+      // },
+      // {
+      //   title: 'Ready-to-use Components',
+      //   description:
+      //     'Widgets made with Tailwind CSS ready to be used in Marketing Websites, SaaS, Blogs, Personal Profiles, Small Business...',
+      //   icon: 'tabler:components',
+      // },
+      // {
+      //   title: 'Best Practices',
+      //   description:
+      //     'Creating secure, efficient, and user-friendly websites that deliver exceptional experiences and lasting value.',
+      //   icon: 'tabler:list-check',
+      // },
+      // {
+      //   title: 'Excellent Page Speed',
+      //   description:
+      //     'Having a good page speed impacts organic search ranking, improves user experience (UI/UX) and increase conversion rates.',
+      //   icon: 'tabler:rocket',
+      // },
+      // {
+      //   title: 'Search Engine Optimization (SEO)',
+      //   description:
+      //     "SEO lies in its ability to enhance a website's visibility, driving organic traffic and enabling it to reach a wider audience.",
+      //   icon: 'tabler:arrows-right-left',
+      // },
+      // {
+      //   title: 'Open to new ideas and contributions',
+      //   description:
+      //     'Embracing a culture that is open to new ideas and contributions is integral fostering innovation, collaboration, and a dynamic user experience.',
+      //   icon: 'tabler:bulb',
+      // },
     ]}
   />
   <Content
