Tweak Headline css

--- a/src/components/ui/Headline.astro
+++ b/src/components/ui/Headline.astro
@@ -29,7 +29,7 @@ const {
         />
       )}
 
-      {subtitle && <p class={twMerge('mt-4 text-muted', subtitleClass)} set:html={subtitle} />}
+      {subtitle && <p class={twMerge('mt-4 text-muted indent-10 text-justify', subtitleClass)} set:html={subtitle} />}
     </div>
   )
 }
