--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,10 +26,10 @@ const metadata = {
       },
       { text: '了解更多', href: '#features' },
     ]}
-    <!-- image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }} -->
+    image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
   >
     <Fragment slot="title">
-      符合你需求的<span class="text-accent dark:text-white highlight"> 营养食谱</span>
+      适合你的<span class="text-accent dark:text-white highlight"> 营养食谱</span>
     </Fragment>
   </Hero>
   <Features
